--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -15,31 +15,9 @@ on:
       - '**/docker-compose-api.yml'
 
 jobs:
-  cache:
-    name: Cache dependencies
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Cache SonarQube packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-
   build:
     name: Build and Tests
     runs-on: ubuntu-latest
-    needs: cache
     outputs:
       jar-path: ${{ steps.upload.outputs.artifact-path || '' }}
     steps:
@@ -52,6 +30,7 @@ jobs:
         with:
           java-version: 21
           distribution: 'zulu'
+          cache: gradle
 
       - name: Build with Gradle
         env:
@@ -66,6 +45,7 @@ jobs:
         with:
           name: app-jar
           path: build/libs/*.jar
+          retention-days: 1
 
   dockerized:
     name: Build and run in Docker
@@ -74,75 +54,47 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - name: Download built jar from build job
+      - name: Download built jar
         uses: actions/download-artifact@v4
         with:
           name: app-jar
           path: ./build/libs
-
-      - name: Cache Docker images
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.docker/cache
-            /tmp/docker-cache
-          key: ${{ runner.os }}-docker-images-${{ hashFiles('docker-compose-test.yml') }}
-          restore-keys: |
-            ${{ runner.os }}-docker-images-    
-
-      - name: Set up Docker Compose
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image (single build)
+      - name: Run in Docker
         run: |
           docker compose -f docker-compose-test.yml pull --quiet
           docker compose -f docker-compose-test.yml up -d
-
-      - name: Wait for services to be healthy
-        run: |
-          echo "Waiting for services to be healthy..."
-          sleep 20
-          docker ps -a
-          docker logs my-app || true
-
-      - name: Stop and remove containers
-        run: docker compose -f docker-compose-test.yml down || true
+          
+          timeout 45s bash -c 'until curl -f http://localhost:8080/actuator/health; do sleep 3; done'
+          
+          if ! curl -f http://localhost:8080/actuator/health; then
+            echo "Application failed to start within 45 seconds"
+            exit 1
+          fi
+          
+          docker compose -f docker-compose-test.yml down
 
   sonar_analysis:
     name: Sonar
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-
+          fetch-depth: 0
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           java-version: 21
-          distribution: 'zulu' # Alternative distribution options are available
-
-      - name: Cache SonarQube packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.sonar/cache
-          key: ${{ runner.os }}-sonar
-          restore-keys: ${{ runner.os }}-sonar
-
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle
-
-      - name: Build and analyze
+          distribution: 'zulu'
+          cache: gradle
+      - name: Sonar analysis
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
-        run: ./gradlew build sonar --info
+        run: ./gradlew sonar --info
     continue-on-error: true
 
   deploy:
@@ -153,14 +105,15 @@ jobs:
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
-
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
+        uses: docker/setup-buildx-action@v3
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u "${{ github.actor }}" --password-stdin
-
-      - name: Download built jar from build job
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Download built jar
         uses: actions/download-artifact@v4
         with:
           name: app-jar
@@ -172,15 +125,13 @@ jobs:
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           IMAGE=ghcr.io/tpabka251/userservice
-          docker build \
+          docker buildx build \
             --build-arg INTERNAL_REPO_LOGIN=${INTERNAL_REPO_LOGIN} \
             --build-arg INTERNAL_REPO_PASSWORD=${INTERNAL_REPO_PASSWORD} \
             -t $IMAGE:latest \
             -t $IMAGE:${{ github.sha }} \
-            .
-          docker push $IMAGE:latest
-          docker push $IMAGE:${{ github.sha }}
-
+            --cache-from type=registry,ref=$IMAGE:latest \
+            --push .
       - name: Deploy to k3s via SSH
         uses: appleboy/ssh-action@master
         with:
@@ -195,4 +146,4 @@ jobs:
             sudo kubectl apply -f k8s/deployment.yaml
             sudo kubectl apply -f k8s/service.yaml
             sudo kubectl rollout restart deployment/userservice
-            sudo kubectl rollout status deployment/userservice
+            sudo kubectl rollout status deployment/userservice -w
