--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -29,16 +29,6 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-docker-images-
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-
-
       - name: Set up Docker Compose
         uses: docker/setup-buildx-action@v3
 
@@ -63,15 +53,7 @@ jobs:
           ./gradlew bootRun --args='--spring.profiles.active=dev' &
           APP_PID=$!
           
-          echo "Waiting for application to start..."
-          for i in {1..15}; do
-            if curl -f http://localhost:8081/actuator/health > /dev/null 2>&1; then
-              echo "Application started successfully"
-              break
-            fi
-            sleep 3
-            echo "Waiting... attempt $i/15"
-          done
+          timeout 45s bash -c 'until curl -f http://localhost:8080/actuator/health; do sleep 3; done'
           
           if ! curl -f http://localhost:8081/actuator/health; then
             echo "Application failed to start within 45 seconds"
