--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -16,7 +16,7 @@ on:
 
 jobs:
   build:
-    name: Build and Tests
+    name: Build
     runs-on: ubuntu-latest
     outputs:
       jar-path: ${{ steps.upload.outputs.artifact-path || '' }}
@@ -38,7 +38,7 @@ jobs:
           INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
         run: |
           chmod +x gradlew
-          ./gradlew clean build
+          ./gradlew clean assemble -x test
 
       - name: Upload built jar as artifact
         uses: actions/upload-artifact@v4
@@ -46,6 +46,24 @@ jobs:
           name: app-jar
           path: build/libs/*.jar
           retention-days: 1
+
+  tests:
+    name: Run Tests
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: 21
+          distribution: 'zulu'
+          cache: gradle
+      - name: Run tests
+        env:
+          INTERNAL_REPO_LOGIN: ${{ secrets.INTERNAL_REPO_LOGIN }}
+          INTERNAL_REPO_PASSWORD: ${{ secrets.INTERNAL_REPO_PASSWORD }}
+        run: ./gradlew test --no-daemon
 
   dockerized:
     name: Build and run in Docker
@@ -66,10 +84,10 @@ jobs:
           docker compose -f docker-compose-test.yml pull --quiet
           docker compose -f docker-compose-test.yml up -d
           
-          timeout 45s bash -c 'until curl -f http://localhost:8080/actuator/health; do sleep 3; done'
+          timeout 30s bash -c 'until curl -f http://localhost:8080/actuator/health; do sleep 2; done'
           
           if ! curl -f http://localhost:8080/actuator/health; then
-            echo "Application failed to start within 45 seconds"
+            echo "Application failed to start within 30 seconds"
             exit 1
           fi
           
@@ -100,19 +118,22 @@ jobs:
   deploy:
     name: Deploy on Prod
     runs-on: ubuntu-latest
-    needs: dockerized
+    needs: [ dockerized, tests ]
 
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Download built jar
         uses: actions/download-artifact@v4
         with:
@@ -131,7 +152,9 @@ jobs:
             -t $IMAGE:latest \
             -t $IMAGE:${{ github.sha }} \
             --cache-from type=registry,ref=$IMAGE:latest \
+            --cache-to type=inline \
             --push .
+
       - name: Deploy to k3s via SSH
         uses: appleboy/ssh-action@master
         with:
