--- a/.github/workflows/update-api.yml
+++ b/.github/workflows/update-api.yml
@@ -14,13 +14,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
         with:
           token: ${{ secrets.PAT_TOKEN }}
           fetch-depth: 0
 
       - name: Cache Docker images
-        uses: actions/cache@v4
+        uses: actions/cache@0057852bfaa89a56745cba8c7296529d2fc39830
         with:
           path: |
             ~/.docker/cache
@@ -30,7 +30,7 @@ jobs:
             ${{ runner.os }}-docker-images-
 
       - name: Set up Docker Compose
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435
 
       - name: Start DB and RabbitMQ
         run: |
@@ -38,7 +38,7 @@ jobs:
           docker compose -f docker-compose-api.yml up -d
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v4
+        uses: actions/setup-java@dded0888837ed1f317902acf8a20df0ad188d165
         with:
           java-version: 21
           distribution: 'zulu'
