--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,12 @@ ext {
     set('internalLibraryVersion', "1.3.6")
 }
 
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:2025.0.0"
+    }
+}
+
 dependencies {
     implementation "ru.tpu.hostel:hostel-core:${internalLibraryVersion}"
     implementation "ru.tpu.hostel:hostel-feign:${internalLibraryVersion}"
@@ -64,7 +70,7 @@ dependencies {
     compileOnly 'javax.servlet:javax.servlet-api:4.0.1'
     implementation 'org.springframework.boot:spring-boot-configuration-processor'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
-    implementation platform("org.springframework.cloud:spring-cloud-dependencies:2025.0.0")
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
     implementation 'commons-io:commons-io:2.14.0'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
